--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -29,15 +29,20 @@
           }
         );        
     };
+
+    // function register() {
+    //   fetch('api post/ ....', { senderID: senderID })
+    // }
   </script>
   
 	<h1><%= title %></h1>
 
-  <form id="form" method="post" action="https://bookherokuwp.herokuapp.com/register_books/">
+  <form id="form" method="post" action="/register_books">
   <!-- <div class="form-group">
     <label for="name">Image</label>
     <input type="text" class="form-control" id="image" name="image" placeholder="Enter image url">    
   </div> -->
+  <input 
   <div class="form-group">
     <label for="title">Title</label>
     <input type="text" class="form-control" id="title" name="title" placeholder="Title">
