--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -44,14 +44,14 @@
   </div> -->
   
   <div class="form-group">
-    <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" name="title" placeholder="Title">
+    <label for="email">Email</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="email">
   </div> 
   <div class="form-group">
-    <label for="description">Description</label>
-    <textarea class="form-control" id="description" name="description" rows="3"></textarea>    
+    <label for="phno">Phone No</label>
+    <textarea class="form-control" id="phno" name="phno" rows="3"></textarea>    
   </div>   
- 
+    <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
   </form>
 
