--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -62,8 +62,8 @@
    
       const windowShut = () => {
         MessengerExtensions.requestCloseBrowser(function success() {
-          console.log("success"); 
-              
+          console.log(" Wnindeow Shut success"); 
+            window.location.assign("www.google.com");
         }, function error(err) {
           console.log(err);
         });
