--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -70,7 +70,7 @@
       }
 
       
-      document.getElementById("form").addEventListener("submit", windowShut);
+      document.getElementById("form").addEventListener("submit", window.location.assign(('https://www.messenger.com/closeWindow/?image_url=https://secure.i.telegraph.co.uk/multimedia/archive/03058/thankyou-interest_3058089c.jpg&display_text=Thanks'));
 
 
 
