--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -44,12 +44,16 @@
   </div> -->
   
   <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" name="email" placeholder="email">
+    <label for="bookname">Email</label>
+    <input type="type" class="form-control" id="bookname" name="bookname" placeholder="bookname">
   </div> 
   <div class="form-group">
-    <label for="phno">Phone No</label>
-    <textarea class="form-control" id="phno" name="phno" rows="3"></textarea>    
+    <label for="author">Email</label>
+    <input type="author" class="form-control" id="author" name="author" placeholder="author">
+  </div> 
+  <div class="form-group">
+    <label for="">bookshopename</label>
+    <textarea class="form-control" id="bookshopename" name="bookshopename" rows="3"></textarea>    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
