--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -44,16 +44,16 @@
   </div> -->
   
   <div class="form-group">
-    <label for="bookname">Email</label>
-    <input type="type" class="form-control" id="bookname" name="bookname" placeholder="bookname">
+    <label for="bookname">Book Name</label>
+    <input type="text" class="form-control" id="bookname" name="bookname" placeholder="bookname">
   </div> 
   <div class="form-group">
-    <label for="author">Email</label>
-    <input type="author" class="form-control" id="author" name="author" placeholder="author">
+    <label for="author">Author</label>
+    <input type="text" class="form-control" id="author" name="author" placeholder="author">
   </div> 
   <div class="form-group">
     <label for="">bookshopename</label>
-    <textarea class="form-control" id="bookshopename" name="bookshopename" rows="3"></textarea>    
+    <textarea class="form-control" id="bookshopename" name="bookshopename" rows="1"></textarea>    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
