--- a/public/testing.ejs
+++ b/public/testing.ejs
@@ -52,8 +52,8 @@
     <input type="text" class="form-control" id="author" name="author" placeholder="author">
   </div> 
   <div class="form-group">
-    <label for="">bookshopename</label>
-    <textarea class="form-control" id="bookshopename" name="bookshopename" rows="1"></textarea>    
+    <label for="bookshopname">bookshopname</label>
+    <textarea class="form-control" id="bookshopname" name="bookshopname" rows="1"></textarea>    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
