--- a/public/edit_book.ejs
+++ b/public/edit_book.ejs
@@ -37,7 +37,7 @@
   
 	<h1><%= title %></h1>
 
-  <form id="form" method="post" action="/register_books">
+  <form id="form" method="post" action="/edit_book">
   <!-- <div class="form-group">
     <label for="name">Image</label>
     <input type="text" class="form-control" id="image" name="image" placeholder="Enter image url">    
