--- a/public/edit_book.ejs
+++ b/public/edit_book.ejs
@@ -45,15 +45,15 @@
   
   <div class="form-group">
     <label for="bookname">Book Name</label>
-    <input type="text" class="form-control" id="bookname" name="bookname" placeholder="bookname">
+    <input type="text" class="form-control" id="bookname" name="bookname" value="<%= bookname %>" >
   </div> 
   <div class="form-group">
     <label for="author">Author</label>
-    <input type="text" class="form-control" id="author" name="author" placeholder="author">
+    <input type="text" class="form-control" id="author" name="author" value="<%= author %>">
   </div> 
   <div class="form-group">
     <label for="bookshopname">bookshopname</label>
-    <textarea class="form-control" id="bookshopname" name="bookshopname" rows="1"></textarea>    
+    <textarea class="form-control" id="bookshopname" name="bookshopname" value="<%= bookshopname %>" rows="1"></textarea>    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
