--- a/public/edit_book.ejs
+++ b/public/edit_book.ejs
@@ -53,7 +53,8 @@
   </div> 
   <div class="form-group">
     <label for="bookshopname">bookshopname</label>
-    <textarea class="form-control" id="bookshopname" name="bookshopname" value="<%= bookshopname %>" rows="1"></textarea>    
+   
+    <input type="text" class="form-control" id="bookshopname" name="bookshopname" value="<%= bookshopname %>">    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
   <input type="submit" value="Submit"> 
