--- a/public/edit_book.ejs
+++ b/public/edit_book.ejs
@@ -45,7 +45,7 @@
   
   <div class="form-group">
     <label for="bookname">Book Name</label>
-    <input type="text" class="form-control" id="bookname" name="bookname" value="<%= bookname %>" >
+    <input type="text" class="form-control" id="bookname" name="bookname" value="<%= bookname %>" readonly>
   </div> 
   <div class="form-group">
     <label for="author">Author</label>
