--- a/public/edit_book.ejs
+++ b/public/edit_book.ejs
@@ -57,6 +57,7 @@
     <input type="text" class="form-control" id="bookshopname" name="bookshopname" value="<%= bookshopname %>">    
   </div>   
     <input type="hidden"  id="sender" name="sender" value="<%= sender_id %>">
+    <input type="hidden" name="docid" id="docid" value="<%= docid %>">
   <input type="submit" value="Submit"> 
   </form>
 
